--- a/Vue-file/VueStart/package.json
+++ b/Vue-file/VueStart/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-service": "^3.2.0",
     "@vue/eslint-config-prettier": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-component": "^1.1.1",
     "chai": "^4.1.2",
@@ -30,7 +31,6 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-element": "^1.0.0",
-    "vue-cli-plugin-element-ui": "^1.1.4",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -42,7 +42,9 @@
       "plugin:vue/essential",
       "@vue/prettier"
     ],
-    "rules": {},
+    "rules": {
+      "no-console":"off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
